# PolyEngine

./: README.md
engine/: CMakeLists.txt  conandata.yml  main.cpp
engine/Include/: engine.h
engine/Sandbox/: CMakeLists.txt
engine/Sandbox/src/: main.cpp
engine/src/: engine.cpp
